--- a/src/main/config/tomcat.service.tmpl
+++ b/src/main/config/tomcat.service.tmpl
@@ -3,12 +3,12 @@ Description=Tomcat Server
 After=network.target
 [Service]
 Type=forking
-User=#TOMCAT_USER
-Group=#TOMCAT_GROUP
-Environment="JAVA_HOME=#JAVA_HOME_DIR"
-Environment="CATALINA_HOME=#TOMCAT_HOME_DIR"
-ExecStart=#TOMCAT_HOME_DIR/bin/startup.sh
-ExecStop=#TOMCAT_HOME_DIR/bin/shutdown.sh
+User=#TOMCAT_USER#
+Group=#TOMCAT_GROUP#
+Environment="JAVA_HOME=#JAVA_HOME_DIR#"
+Environment="CATALINA_HOME=#TOMCAT_HOME_DIR#"
+ExecStart=#TOMCAT_HOME_DIR#/bin/startup.sh
+ExecStop=#TOMCAT_HOME_DIR#/bin/shutdown.sh
 Restart=always
 [Install]
 WantedBy=multi-user.target
